--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,5 +1,12 @@
 body {
     background-color: white;
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+}
+main{
+    flex: 1 0 auto;
+
 }
 header{
     max-width: 100%;
@@ -38,6 +45,9 @@ h1{
     font-family: 'Raleway', sans-serif;
     font-size: 25px;
     
+}
+#skills{
+    background-color: #85144b;
 }
 .welcome{
     display: none;
@@ -140,17 +150,11 @@ footer{
     .lead{
         width: 70%;
     }
-    .display-4{
-        font-size: 25px; 
-    }
     h2{
         font-size: 20px;
     }
     .welcome{
         font-size: 25px;
         color: #191970;
-    }
-    .offset-6{
-        margin-right: 15px;
     }
   }
